# python-playground

./: .gitignore  README.md  bing_graphics_test.py  dionysus.html  elif_and_switch.py  japan_population_3.csv  jupyterlab_playground.ipynb  matplotlib_playground.py  ml_basics.py  ml_practice_1.py  ml_practice_2.py  mnist.py  multiple_regression.py  mymodule.py  numpy_playground.py  opencv_playground.py  opencv_playground_2.py  opencv_playground_3.py  pandas_playground.py  pillow_playground.py  polynomial_regression.py  pytorch_1.py  pytorch_2.py  pytorch_custom_dataset.py  random_turtle.py  scrapper_playground.py  scrapper_playground_2.py  scrapper_playground_3.py  scrapper_playground_4.py  scrapper_playground_5.py  send_email.py  sklearn_excercise_1.py  sklearn_excercise_2.py  sklearn_playground.py  soup_html.html  test-script.py  test_args_input.py  torch_bing_reply.py  torch_ok.py  turtley.py  (+2 more)
poetry-demo/: pyproject.toml
poetry-demo/poetry_demo/: script.py
pyinstaller_demo/: README.md  pyproject.toml
rp_poetry/: README.md  pyproject.toml
rp_poetry/rp_poetry/: script.py
rp_poetry/tests/: test_rp_poetry.py
scraping-kadai/: kadai_2.py  kadai_tenki.py
titanic_ml/: README.md  pyproject.toml
titanic_ml/titanic_ml/: script.py
