[tool.poetry]
name = "titanic-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "titanic_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
